Address final round comments
